[gd_scene load_steps=4 format=3 uid="uid://baq2lt5qgsmyf"]

[ext_resource type="Script" uid="uid://pqgi4sjs43o0" path="res://scripts/LogView.gd" id="1"]
[ext_resource type="Script" uid="uid://db4aurrjicoqf" path="res://scripts/GraphCanvas.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.09, 0.1, 0.13, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.32, 0.44, 0.7, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="LogView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="GraphPanel" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/GraphPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphCanvas" type="Control" parent="MarginContainer/HBoxContainer/GraphPanel/ScrollContainer"]
layout_mode = 2
script = ExtResource("2")

[node name="DetailsPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="EntryTitle" type="Label" parent="MarginContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.93, 1, 1)
text = "World Log"

[node name="EntryBody" type="RichTextLabel" parent="MarginContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a node to see details."
